NetBSD Problem Report #44921

From jruohone@gmail.com  Sun May  1 17:00:38 2011
Return-Path: <jruohone@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 0B27663B9D1
	for <gnats-bugs@gnats.netbsd.org>; Sun,  1 May 2011 17:00:38 +0000 (UTC)
Message-Id: <20110501170028.0E55E56C5@marx.bitnet>
Date: Sun,  1 May 2011 20:00:28 +0300 (EEST)
From: Jukka Ruohonen <jruohonen@iki.fi>
Sender: a b <jruohone@gmail.com>
Reply-To: jruohonen@iki.fi
To: gnats-bugs@gnats.NetBSD.org
Subject: <errno.h> needs updating
X-Send-Pr-Version: 3.95

>Number:         44921
>Category:       standards
>Synopsis:       <errno.h> needs updating
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    standards-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun May 01 17:05:00 +0000 2011
>Closed-Date:    Sun Mar 08 23:16:09 +0000 2020
>Last-Modified:  Sun Mar 08 23:16:09 +0000 2020
>Originator:     Jukka Ruohonen
>Release:        
>Organization:
-
>Environment:

>Description:

>How-To-Repeat:

The following constants are not defined in <errno.h>:

ENOTRECOVERABLE
EOWNERDEAD

http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/errno.h.html

>Fix:

More as a remainder, but these should be added at some point.

>Release-Note:

>Audit-Trail:
From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44921 CVS commit: src
Date: Sun, 1 May 2011 17:07:06 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Sun May  1 17:07:06 UTC 2011

 Modified Files:
 	src/distrib/sets/lists/tests: mi
 	src/tests/include: Makefile
 Added Files:
 	src/tests/include: t_errno.c

 Log Message:
 Verify PR standards/44921.


 To generate a diff of this commit:
 cvs rdiff -u -r1.317 -r1.318 src/distrib/sets/lists/tests/mi
 cvs rdiff -u -r1.5 -r1.6 src/tests/include/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/include/t_errno.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: =?UTF-8?B?TWljaGHFgiBHw7Nybnk=?= <mgorny@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44921 CVS commit: src
Date: Sun, 8 Mar 2020 22:09:43 +0000

 Module Name:	src
 Committed By:	mgorny
 Date:		Sun Mar  8 22:09:43 UTC 2020

 Modified Files:
 	src/lib/libc/nls: C.msg
 	src/lib/libc/sys: intro.2
 	src/sys/compat/linux/common: linux_errno.c
 	src/sys/sys: errno.h
 	src/tests/include: t_errno.c

 Log Message:
 PR standards/44921: Add errno consts for robust mutexes

 Add the two missing errno.h constants: EOWNERDEAD and ENOTRECOVERABLE.
 While technically they're used for robust mutexes which we do not
 support at the moment, they are listed in POSIX and used by libc++.
 While libc++ can be made to build without it, it just locally redefines
 the values then, so we may as well define them globally.


 To generate a diff of this commit:
 cvs rdiff -u -r1.16 -r1.17 src/lib/libc/nls/C.msg
 cvs rdiff -u -r1.60 -r1.61 src/lib/libc/sys/intro.2
 cvs rdiff -u -r1.15 -r1.16 src/sys/compat/linux/common/linux_errno.c
 cvs rdiff -u -r1.41 -r1.42 src/sys/sys/errno.h
 cvs rdiff -u -r1.1 -r1.2 src/tests/include/t_errno.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: mgorny@NetBSD.org
State-Changed-When: Sun, 08 Mar 2020 23:16:09 +0000
State-Changed-Why:
revision 1.42
date: 2020-03-08 23:09:43 +0100;  author: mgorny;  state: Exp;  lines: +6 -2;  commitid: mY2I5PXzDbHdcEZB;
PR standards/44921: Add errno consts for robust mutexes

Add the two missing errno.h constants: EOWNERDEAD and ENOTRECOVERABLE.
While technically they're used for robust mutexes which we do not
support at the moment, they are listed in POSIX and used by libc++.
While libc++ can be made to build without it, it just locally redefines
the values then, so we may as well define them globally.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.